po4a (0.35.1-1) experimental; urgency=low

  * New upstream release.
    - New presentation of placeholders in the Xml module. Closes: #513716
    - Updated po4a.7 manpage so that file names in the ASCII art chart match
      command line and text. Closes: #513791

 -- Nicolas FRANCOIS (Nekral) <nicolas.francois@centraliens.net>  Sat, 14 Feb 2009 12:07:08 +0100

po4a (0.35-1) experimental; urgency=low

  * New upstream release.
    - Docbook module:
      + <acronym> moved to the inline section. Closes: #500448
      + <glossterm> removed from the inline section. This make them
        translatable. Closes: #492485
      + <ackno> added to the tags section. CLoses: #501204
      + <option> moved to the inline section. Closes: #494607
      + <code> moved to the inline section. Closes: #513708
      + <footnote> moved to the placeholder section. (see #513716)
    - Fix typos and formating in the Locale:Po4a:XML man page. Closes: #494626
    - Updated dependency on perl-modules (>= 5.10.0-16) because the utf8
      option of Pod::Man is needed.
    - Xml has support for placeholders and the conflicts handling was
      improved. Closes: #495947
    - Manpages are now generated in utf-8.
    - New support for asciidoc format (except tables) in the text module.
      Closes: #498094

 -- Nicolas FRANCOIS (Nekral) <nicolas.francois@centraliens.net>  Tue, 10 Feb 2009 00:42:19 +0100

po4a (0.34-2) unstable; urgency=low

  * debian/control: Bump Standards-Version to 3.8.0. No changes. 

 -- Nicolas FRANCOIS (Nekral) <nicolas.francois@centraliens.net>  Sun, 20 Jul 2008 23:05:29 +0200

po4a (0.34-1) unstable; urgency=low

  * New upstream release.
    - Added support for the Halibut format. Closes: #483647
    - Added support for the Markdown format, as used with Ikiwiki.
      Closes: #484030
    - Do not end re-wrapped lines with a space. Closes: #484026
    - text module: Make sure files are not mixed together when gettextized at
      the same time. Closes: #484023