@@ -1,0 +1,1 @@
+debian/examples/compare-msgids.pl
