@@ -59,6 +59,7 @@ binary-indep: build install
 	dh_testroot
 	dh_installdocs NEWS
 	dh_installchangelogs changelog
+	dh_installexamples
 	dh_compress
 	dh_fixperms
 	dh_installdeb
