@@ -4,8 +4,12 @@ po4a (0.35.1-1) experimental; urgency=low
     - New presentation of placeholders in the Xml module. Closes: #513716
     - Updated po4a.7 manpage so that file names in the ASCII art chart match
       command line and text. Closes: #513791
+  * debian/examples/compare-msgids.pl: Added script to output wdiffs between
+    the new msgid and the old ones (generated when --previous) is used.
+    Closes: #514755
+  * debian/rules, debian/po4a.examples: Install examples.
 
- -- Nicolas FRANCOIS (Nekral) <nicolas.francois@centraliens.net>  Sat, 14 Feb 2009 12:07:08 +0100
+ -- Nicolas FRANCOIS (Nekral) <nicolas.francois@centraliens.net>  Sat, 14 Feb 2009 13:29:03 +0100
 
 po4a (0.35-1) experimental; urgency=low
 
